--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t nawabkibria/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run nawabkibria/docker-react npm run test -- --coverage
+  - docker run -e CI=true nawabkibria/docker-react npm run test -- --coverage
