added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true nawabkibria/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-1"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-019015173296Info"
+  bucket_path: ""docker-react"
+  on:
+    branch: dev
+  access_key_id: $AWS_ACCESS_KEY
+  secret_key_id: "$AWS_SECRET_KEY"
