--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ deploy:
   on:
     branch: dev
   access_key_id: $AWS_ACCESS_KEY
-  secret_key_id: "$AWS_SECRET_KEY"
+  secret_key_id: $AWS_SECRET_KEY
+
